--- a/_posts/2018-12-23-biology-1.md
+++ b/_posts/2018-12-23-biology-1.md
@@ -18,4 +18,4 @@ tags:
 
 고등학교를 졸업하고 나서 처음 생물을 접했습니다. 고등학교 시절에는 생물이 암기 과목이라고 생각했습니다. 고3 때는 DNA가 복제하는 순서를 종이에 몇 번이고 써서 외웠던 것 같습니다. 하지만 그것의 의미를 한 번도 생각해보지 않았습니다. 하지만 이번에 DNA 법칙을 읽으면서 생물에서 다루는 내용들이 참 경이롭다는 생각을 했습니다. 우리 존재 자체가 DNA로부터 시작되었고 그것에 대해서 호기심이나 질문을 던지는 것은 자연스러운 일이었을텐데 고등학교 시절에는 왜 이와 같은 감정을 느끼지 못했을까요? 
 
-저와 같이 생물에 관심이 있으신 분들은 이 책을 읽어보셔도 좋을 것 같습니다. 생물 전반에 대한 내용을 재미있게 훑을 수 있는 책입니다.
+저와 같이 생물에 관심이 있으신 분들은 이 책을 읽어보셔도 좋을 것 같습니다. 생물 전반에 대한 내용을 재미있게 훑을 수 있는 책입니다. 특히 처음의 분자생물학 관련 분야는 매우 이해하기 쉽고 간단하게 쓰여있습니다.
