--- a/_posts/2018-12-23-biology-1.md
+++ b/_posts/2018-12-23-biology-1.md
@@ -1,5 +1,5 @@
 ---
-title: "DNA의 법칙 Review"
+title: "DNA의 법칙"
 categories:
   - biology
 tags:
@@ -18,4 +18,208 @@ tags:
 
 고등학교를 졸업하고 나서 처음 생물을 접했습니다. 고등학교 시절에는 생물이 암기 과목이라고 생각했습니다. 고3 때는 DNA가 복제하는 순서를 종이에 몇 번이고 써서 외웠던 것 같습니다. 하지만 그것의 의미를 한 번도 생각해보지 않았습니다. 하지만 이번에 DNA 법칙을 읽으면서 생물에서 다루는 내용들이 참 경이롭다는 생각을 했습니다. 우리 존재 자체가 DNA로부터 시작되었고 그것에 대해서 호기심이나 질문을 던지는 것은 자연스러운 일이었을텐데 고등학교 시절에는 왜 이와 같은 감정을 느끼지 못했을까요? 
 
-저와 같이 생물에 관심이 있으신 분들은 이 책을 읽어보셔도 좋을 것 같습니다. 생물 전반에 대한 내용을 재미있게 훑을 수 있는 책입니다. 특히 처음의 분자생물학 관련 분야는 매우 이해하기 쉽고 간단하게 쓰여있습니다.
+저와 같이 생물에 관심이 있으신 분들은 이 책을 읽어보셔도 좋을 것 같습니다. 생물 전반에 대한 내용을 재미있게 훑을 수 있는 책입니다. 특히 1, 2장의 분자생물학 관련 분야는 매우 이해하기 쉽고 간단하게 쓰여있습니다.
+
+여기에서는 1, 2장의 주요 부분에 대해서 정리하겠습니다.
+
+<br/>
+
+# 1장. 세포의 탄생
+
+1장에서 다루는 대상은 하나의 세포입니다. 지구가 탄생하고 세포가 어떻게 생겨났는지 간단하게 훑고 나서 세포가 어떻게 유전 정보를 전달할 수 있는지 설명합니다. DNA 복제와 단백질 합성 과정이 1장의 핵심 내용입니다.
+
+<br/>
+
+## 1. 세포의 분자 생물학을 읽자
+
+- 분자생물이란 '생물도 자세히 관찰하면 물질로 이루어져 있으므로, 물질 언어로 연구하면 생물에 대해서도 알 수 있을 것'이라는 이론이다. 좀 더 자세히 말하면 '생물은 분자로 이루어진 기계'라는 사고방식이다.
+
+<br/>
+
+- 생물학의 역사
+
+  ![](/assets/images/biology/history.png)
+
+<br/>
+
+- 지구의 탄생에서 세포의 탄생까지
+  - 원시 수프(with H2O) > C, H, O, N > 분자: 암모니아(NH3), 물(H2O), 수소(H2), 메탄(CH4) > 유기물: 아미노산, 당, 뉴크레이타이드 > 폴리뉴클레오타이드 > DNA(데옥시리보핵산)
+
+<br/>
+
+## 2. DNA는 유전정보
+
+- DNA, 염색체, 유전자, 게놈
+  - DNA: 데옥시리보핵산이라는 물질의 이름
+  - 염색체: DNA가 핵 안에 수납되어 있을 때의 형태
+  - 유전자: DNA 서열 중에서 실제로 작용하는(단백질을 만드는) 부분
+  - 게놈: 각각이 생물이 갖고 있는 유전정보 총체
+
+<br/>
+
+- DNA는 4 종류의 뉴클레오타이드로 이루어져있다.
+  - 뉴클레오 타이드는 당과 인산과 염기로 이루어진다.
+    - 염기의 종류에는 다음 4가지가 있다: 타이민(T), 사이토신(C), 아데닌(A), 구아닌(G)
+    - 염기는 A와 T, C와 G라는 상보적 염기쌍 형태를 취하며 그 상보적 염기쌍이 조합되어 이중나선을 만든다.
+
+<br/>
+
+- 단백질은 DNA에 들어 있는 유전 정보를 읽어내고 작용해서 만들어진다.
+  - 단백질은 20종류의 아미노산으로 만들어져요. 이 아미노산이 어떤 순서로, 몇 개가 연결되어 있는지에 따라서 단백질의 종류가.달라진다. 인간의 세포에는 수만 종류의 단백질이 있다.
+
+<br/>
+
+- 세포 분열: DNA 유전정보를 전달하는 구조
+  - 세포주기
+    1. 분열 초기로 부모 세포보다 작기 때문에 원래 크기가 되거나 세포의 기능을 유지하기 위해 필요한 단백질을 계속 만들어낸다.
+    2. DNA 카피가 일어난다. DNA 유전정보를 그대로 똑같이 카피한다. 이를 복제라한다. 이 DNA 복제 시기에도 단백질을 계속 만든다.
+    3. 복제가 완성되면 이번에는 그것을 담을 그릇을 만든다. 즉 단백질을 대량으로 만들고, 몸을 점점 크게 분열할 수 있도록 준비한다.
+    4. 준비가 끝나면 분열, 염색체의 형태가 보이는 이 시기에는 단백질을 만들지 않는다. 왜냐하면 염색체는 DNA가 차근차근히 접힌 상태이므로 유전정보를 해독하는 구조가 작용하지 않기 때문이다.
+
+<br/>
+
+- 복제와 전사
+  - 복제: DNA 염기서열을 통째로 카피해서 완전히 똑같은 것을 두 개로 만드는 것. 유전 정보를 보존하여 전달한다.
+  - 전사: DNA 염기서열을 읽어내고 단백질을 만든다. 그래서 유전 정보가 작용한다.
+
+<br/>
+
+## 3. 유전 전달 물질 'DNA'
+
+- 왓슨과 크릭이 발견한 A와 T, G와 C가 쌍을 이루는 상보적 염기쌍이라는 구조는 DNA가 형태만 해명한 것이 아니다. 그와 동시에 유전이 어떻게 전달되는지 그 구조까지 원리적으로 해명하고 있었다.
+  - 그것은 마주 보는 사슬의 서열이 상보적 관계이기 때문에 DNA가 자기복제를 할 수 있다는 뜻이다.
+  - DNA가 복제될 때는 DNA 2 가닥의 사슬이 떨어지면서 각각의 가닥에 상보적인 DNA가 합성된다. 이 떄 자유로워진 한 가닥 사슬을 주형으로 하여 A와 T, G와 C가 염기쌍을 만들어내는 규칙에 따라 상대의 사슬이 만들어진다.
+  - 이렇게 왓슨과 크릭이 발견한 '상보적 염기쌍'을 통해 복제라는 구조까지 예견할 수 있었고, 유전자가 어떤 물질인지까지도 결론내릴 수 있었다.
+
+<br/>
+
+- 뉴클레오타이드 4종류
+
+![](/assets/images/biology/nucleotide.png)
+
+<br/>
+
+- DNA 데이터
+  - DNA 1회전 길이: 3.4nm
+  - DNA 지름: 2.0nm
+  - DNA가 1회전하는 폭 사이에 염기가 10개
+
+<br/>
+
+- DNA 복제 구조
+  - DNA에는 복제 방향이 있다: 5' -> 3'
+  - DNA 복제할 때 단백질이 관여한다.
+    - DNA 헬리케이스: DNA 분리
+    - DNA 중합효소: DNA 합성
+
+<br/>
+
+## 4. 단백질 합성
+
+- RNA는 리보뉴클레오타이드의 약자로 리보핵산이라고 한다. RNA도 DNA와 마찬가지로 염기와 당과 인산으로 이루어진 뉴클레오타이드 사슬이다. 염기의 종류 역시 4가지가 있다. 하지만 DNA와 RNA는 세 가지 다른 점이 있다.
+  - DNA는 이중나선 구조를 취하지만 RNA는 한 가닥 사슬이다.
+  - RNA에서는 타이민(T)이 아닌 유라실(U)이 염기가 된다.
+  - RNA는 DNA보다 당에 산소가 1개 더 많다.
+
+<br/>
+
+- 센트럴 도그마
+  - DNA -> RNA -> 단백질로 정보가 전달된다.
+
+<br/>
+
+- 단백질 합성 레시피
+
+  - DNA 정보를 mRNA로 전사한다.
+
+  - RNA를 스플라이싱한다.
+
+  - mRNA 정보를 아미노산으로 번역한다.
+
+    1. mRNA는 리보솜에 붙는다.
+       - 리보솜은 mRNA가 운반해온 유전정보를 번역한다.
+
+    2. 리보솜은 mRNA 염기서열을 3개씩 읽고 1개의 아미노산으로 번역한다. 그 세 개의 염기 조합을 코돈이라 한다. 그것이 20 종류의 아미노산 중 하나와 대응한다. 코돈을 아미노산으로 대응시키는 이 규칙을 '유전암호'라 한다. 코돈 조합은 4종류 염기가 3개씩 조합하므로 총 4 x 4 x 4 = 64 종류 조합이 있다.
+
+    3. tRNA는 아미노산을 리보솜으로 운반해온다.
+       - DNA 정보를 전사한 mRNA 염기서열을 아미노산으로 번역하 ㄹ때 그 아미노산을 운반하는 것이 바로 tRNA이다. tRNA에 아미노산을 붙이는 것이 바로 아미노아실 tRNA 합성효소인데 이 효소가 tRNA와 아미노산의 관계를 알고 있다. 즉 tRNA는 mRNA의 삼중 염기와 상보적 염기쌍을 만드는 부분을 갖고 있고 tRNA와 아미노산이 아미노아실 tRNA 합성 효소를 통해 결합함으로써 하나의 코돈에 하나의 아미노산에 대응하게 된다.
+
+    4. 리보솜에서 아미노산을 연결한다.
+       - 먼저 mRNA 상의 코돈 1개에 아미노산 1개를 붙이 tRNA 안티코돈이 대응하고 mRNA의 염기서열 정보를 아미노산으로 번역한다. 그러면 번역된 코돈의 다음 코돈에 대응하는 다른 tRNA가 붙고 다시 아미노산으로 번역한다. 이렇게 해서 생긴 2개의 아미노산을 리보솜 상에서 연결해가는 것이다. 그리고 차례차례 번역, 결합 작업을 반복한 결과 생긴 아미노산이 잔뜩 연결된 것을 폴리펩타이드라 한다.
+
+    5. mRNA 상에서 '이제 여기선 번역은 끝'이라는 표시인 mRNA 상의 코돈까지 오면 mRNA와 리보솜과 폴리펩타이드는 제각각 흩어진다. 이 때 폴리펩타이드는 세포 속에서 자연스럽게 3차원 형태가 된다. 이것은 폴리펩타이드가 구성하고 있는 아미노사네 친수성과 소수성이라는 성질이 있기 떄문이다. 세포 안에는 물이 많은데, 물을 실헝하는 소수성 아미노산은 안쪽으로, 물을 좋아하는 친수성 아미노산은 바깥쪽으로 향하는 성질이 폴리펩타이드를 입체적인 구조로 만든다. 이렇게 만들어진 3차원 형태를 단백질이라 한다.
+
+<br/>
+
+![](/assets/images/biology/protein.png)
+
+<br/>
+
+### 정리: DNA와 단백질
+
+- DNA 유전 정보에는 단백질을 만드는 방법이 쓰여있는데, 그 정보가 RNA로 전사되면 RNA는 어댑터로 활약하면서 아미노산을 서열하여 단백질을 만들고 그 단백질이 DNA 전사를 촉매한다. DNA, RNA, 단백질의 운명적인 순환이다.
+
+<br/>
+
+## 5. 세포 분열은 생존 경쟁인가
+
+- 최초의 세포는 어떻게 시작되었을까? 바꿔 말해서 최초의 생명은 어떤 것이었을까?
+  - 분명 처음에는 세포 1개로 시작되었을 것이라고 과학자들은 추정한다. 
+
+<br/>
+
+- 유기물은 세포가 탄생하기 전에 이미 지구상에 있을 것이라고 추정한다.
+  - 지금의 세포는 아미노산이라든지 뉴클레오타이드 같은 것으로 만들어지는데, 그런 생물을 만들어내는 물질을 통틀어서 유기물이라 한다. 유기물은 탄소 화합물을 뜻한다. 1955년 밀러는 원시 지구의 환경을 모방해서 메탄(CH4), 암모니아(NH3), 물(H20), 수소(H2)의 혼합가스를 넣고 방전을 시켰다. 그 결과 아미노산, 뉴클레오타이드, 당, 지방산처럼 생물에게는 꼭 필요한 물질을 만들 수 있다는 것을 확인할 수 있었다.
+
+<br/>
+
+- 생물의 첫 번째 특징: 복제
+  - 분자가 결합하고 복제를 할 수 있으려면 직접적이든 간접적이든 촉매작용을 할 수 있어야 한다.
+  - 촉매란 자기 자기 자신은 변하지 않고 어떤 화학반응의 반응속도를 향상시키는 작용을 하는 물질을 말한다.
+  - 다시 말해서 최초의 생물이 자신과 똑같은 분자를 복제할 수 있다는 건 그 복제 반응을 촉매할 수 있는 능력도 갖고 있다는 것이다.
+
+<br/>
+
+- 지금 세포 내에서 가장 잘 이용되고 있는 촉매는 단백질이다. 
+  - 단백질은 여러 가지 형태를 3차원적으로 취할 수 있기 때문에 촉매로서는 매우 우수하다.
+    - 하지만 촉매로서는 우수하지만 복제한다는 점에서 최초의 생명분자로 보기 어렵다.
+
+<br/>
+
+- rRNA
+
+  - 상보적 염기쌍을 만들 수 있다. RNA와 DNA는 거의 같은 형태를 취하기 때문에 자신을 2회 복제하면 다시 자신을 만들 수 있다. 따라서 복제한다는 점에서는 합격이다.
+
+  - 테트라히메나의 rRNA 염기서열
+    - 자가 스플라싱 되어 rRNA로 사용하지 않는 부분(인트론 중 일부)이 촉매로 작동한다.
+  - RNA는 DNA처럼 정보를 저장할 뿐 아니라 접히기까지 하기 떄문에 3차원적 형태를 취하기도 하고 다양한 촉매 기능을 할 수 있다. RNA는 상보적 염기쌍에 의해 복제도 할 수 있고, 그 복제 반응을 촉매할 수 있다는 가능성이 밝혀졌다.
+
+<br/>
+
+- 막의 형성
+  - RNA 분자가 자신을 위해서 단백질을 합성했는데, 가까이에 붙어 있지 않고 자유롭게 돌아다니면 그 단백질은 RNA에는 별 도움이 되지 않는다.
+  - RNA가 경쟁에서 살아남는 가장 좋은 방법은 막을 만들어서 단백질을 둘러싸는 것이었다. 자신이 만들어낸 단백질을 막으로 둘러싸고 자신이 아니면 사용할 수 없게 만든다.
+  - 막을 만드는 게 인지질이다. 인지질은 물을 싫어하는 소수성 부분과 물을 좋아하는 친수성 부분으로 이루어진다. 다시 말해서 인지질은 구획을 나누는 데 적합한 성질의 물질이어서 자연스럽게 안쪾과 바깥쪽을 만들어내. 이게 이중층이 되어 막을 형성한다.
+
+<br/>
+
+- DNA 등장
+  - DNA는 RNA보다 튼튼하고 안정되어 있으며, 무엇보다 사슬복구가 가능하다. 상처 난 염기가 주형이 되어 원래 정보를 복구할 수 있기 때문이다. 따라서 유전 정보를 보존하고 유지하기 위해서는 RNA보다 DNA가유리하다.
+  - 다시 말해서 RNA는 진화의 어느 단계에서인가 유전정보를 갖고 있는 서열을 DNA로 옮겼을 것이다.
+
+<br/>
+
+### 정리: RNA 월드
+
+- 생명이 탄생하기 전에 작은 분자가 합성되었고, 큰 분자를 만들기 위해서 연결되었으며, RNA 같은 것들이 촉매 기능을 가지면서 스스로를 복제하게 되었다. RNA가 단백질을 손을 잡자, 아미노산 사슬로 번역될 수 있는 정보 역할을 하기 위해 RNA 염기서열이 되었고 인지질 막으로 둘러싸인 구역을 만들어냈다. 그리고 다시 RNA에서 DNA로 정보를 옮긴 것으로 추정한다.
+
+<br/>
+
+### 과학자들이 정의한 최초의 세포
+
+- 분자는 연결되는 성질이 있다.
+- 생명의 필수요소는 복제와 자가촉매이다.
+- 일단 자기복제가 시작되면 진화론에서 말하는 자연도태와 경쟁원리를 적용시켰다.
+
+
+
