--- a/_posts/2018-12-30-genomics-1.md
+++ b/_posts/2018-12-30-genomics-1.md
@@ -9,9 +9,9 @@ tags:
 
 생물학 분야의 Data Science에 관심이 생겨서 공부를 하고 있습니다. 고등학교 졸업 이후에 생물은 처음이어서 새로운 용어들에 익숙해지려고 노력하고 있습니다. 오늘은 Youtube에 Genomics를 잘 설명해주는 [Genomics 101](https://www.youtube.com/watch?v=BoUS65mxnIE)가 있어서 해당 내용을 정리해보려고 합니다.
 
-<br/><br/>
+<br/>
 
-### 1. Genomics
+## 1. Genomics
 
 - Genomics는 유기체의 genome을 연구하는 학문이다.
   - Genome은 한 생물이 가지는 모든 유전적 정보의 총합이다. (all of the genes in an organism)
@@ -28,7 +28,7 @@ tags:
 
 <br/>
 
-### 2. Genome
+## 2. Genome
 
 - 사람은 3 billion base * 2를 가진다. 
 
@@ -36,11 +36,13 @@ tags:
 - 각각의 염색체 마다 500 - 4000개의 gene이 있다. 사람은 약 20,000 - 25,000개의 gene을 가진다.
   - Gene 사이에 공간이 있다. 실제로 유전자의 98%는 유전 정보를 전달하는 부분이 아니다. 오직 2%만 protein을 만드는데 사용된다.
 
+<br/>
+
 ![](/assets/images/biology/genome.png)
 
 <br/>
 
-### 3. Gene Expression
+## 3. Gene Expression
 
 - Gene에는 exon과 intron가 있다.
   - Exon: coding
@@ -49,11 +51,13 @@ tags:
 - Gene의 Exon 부분이 transcription을 거쳐서 RNA가 되고 translation을 거쳐서 단백질을 합성한다.
   - Gene expression은 위 과정을 의미한다. Highly Express 된다는 것은 얼마나 자주 위 과정이 일어나는가를 뜻한다. 조직마다 다르다.
 
+<br/>
+
 ![](/assets/images/biology/gene-expression.png)
 
 <br/>
 
-### 4. Application
+## 4. Application
 
 - 과학 범죄 수사
 
@@ -68,7 +72,7 @@ tags:
 
 <br/>
 
-### 5. Genomics & Disease
+## 5. Genomics & Disease
 
 - 유전적 차이
   - [SNP(single nucleotide polymorphism)](https://terms.naver.com/entry.nhn?docId=292963&cid=60262&categoryId=60262)
@@ -81,5 +85,5 @@ tags:
     - 특정 부분의 차이: leukemia 
     - 숫자의 차이: Down's syndrome
 
-
+<br/>
 
