--- a/_posts/2018-12-30-genomics-1.md
+++ b/_posts/2018-12-30-genomics-1.md
@@ -1,10 +1,11 @@
 ---
 title: "Genomics 101"
 categories:
-   - biology
+   - genomics
 tags:
    - biology
    - genomics
+   - lecture
 ---
 
 생물학 분야의 Data Science에 관심이 생겨서 공부를 하고 있습니다. 고등학교 졸업 이후에 생물은 처음이어서 새로운 용어들에 익숙해지려고 노력하고 있습니다. 오늘은 Youtube에 Genomics를 잘 설명해주는 [Genomics 101](https://www.youtube.com/watch?v=BoUS65mxnIE)가 있어서 해당 내용을 정리해보려고 합니다.
