--- a/_posts/2018-12-30-genomics-1.md
+++ b/_posts/2018-12-30-genomics-1.md
@@ -1,7 +1,7 @@
 ---
 title: "Genomics 101(1) - What is genomics"
 categories:
-   - biology
+   - biology and medicine
 tags:
    - biology
    - genomics
