--- a/_posts/2018-12-30-genomics-2.md
+++ b/_posts/2018-12-30-genomics-2.md
@@ -1,7 +1,7 @@
 ---
 title: "Genomics 101(2) - Genomics and Cancer"
 categories:
-   - biology
+   - biology and medicine
 tags:
    - biology
    - genomics
